# starter-kits

./: .gitignore  .gitmodules  LICENSE  README.md
address-poisoning-py/: Dockerfile  (+6 more)
changenow-funding-py/forta_bot-0.2.0/: LICENSE  README.md  pyproject.toml  setup.cfg
changenow-funding-py/forta_bot-0.2.0/src/forta_bot/: __init__.py  di.py
changenow-funding-py/forta_bot-0.2.0/src/forta_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
changenow-funding-py/forta_bot-0.2.0/src/forta_bot/alerts/: __init__.py  alert_event.py  get_alert.py  get_alerts.py  send_alerts.py
changenow-funding-py/forta_bot-0.2.0/src/forta_bot/blocks/: get_latest_block_number.py
changenow-funding-py/forta_bot-0.2.0/src/forta_bot/cli/: di.py  run_alert.py  run_block.py  run_block_range.py  run_transaction.py
changenow-funding-py/forta_bot-0.2.0/src/forta_bot/common/: handle_alert.py  initialize.py  scan_alerts_options.py
changenow-funding-py/forta_bot-0.2.0/src/forta_bot/findings/: finding.py  finding_type.py
changenow-funding-py/forta_bot-0.2.0/src/forta_bot/handlers/: run_handlers_on_alert.py  run_handlers_on_block.py  run_handlers_on_transaction.py
changenow-funding-py/forta_bot-0.2.0/src/forta_bot/jwt/: constants.py  decode_jwt.py  di.py  get_rpc_jwt.py  get_scanner_jwt.py  verify_jwt.py
changenow-funding-py/forta_bot-0.2.0/src/forta_bot/labels/: label.py  label_source.py
changenow-funding-py/forta_bot-0.2.0/src/forta_bot/logs/: __init__.py  di.py  get_logs_for_block.py  log.py
changenow-funding-py/forta_bot-0.2.0/src/forta_bot/scanning/: di.py  should_submit_findings.py
changenow-funding-py/forta_bot-0.2.0/src/forta_bot/traces/: di.py  get_trace_data.py  trace.py
changenow-funding-py/forta_bot-0.2.0/src/forta_bot/transactions/: create_transaction_event.py  get_transaction_receipt.py
changenow-funding-py/forta_bot-0.2.0/src/forta_bot/utils/: assertions.py  get_forta_api_headers.py  get_forta_api_url.py  get_json_file.py
metamorphic-contracts-py/: Dockerfile  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
metamorphic-contracts-py/src/: agent.py  findings.py  options.py  scoring.py  utils.py
metamorphic-contracts-py/tests/: test_agent.py  test_findings.py
red-pill-contracts-py/: README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
red-pill-contracts-py/src/: agent.py  findings.py  options.py  scoring.py
red-pill-contracts-py/tests/: test_agent.py  test_data.py
(+795 files in other folders)
