[tool.poetry]
name = "forta-bot-metamorphism"
version = "0.2.43"
description = "Bot scanning the blockchain for metamorphic contracts"
authors = ["apehex <apehex@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <4"
forta-agent = ">=0.1.25"
forta-toolkit = ">=0.1.23"
ioseeth = ">=0.1.20"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
